log
Tue 11 Oct 2022 01:20:26 AM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
4a9d3bf
Tue 11 Oct 2022 01:20:52 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:28: error: invalid type argument of unary ‘*’ (have ‘long unsigned int’)
   36 |  Heap* new = (Heap*)malloc(*sizeof(Heap));
      |                            ^~~~~~~~~~~~~
Compilation failed
d1f54d3
Tue 11 Oct 2022 01:21:01 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:41: error: expected expression before ‘)’ token
   36 |  Heap* new = (Heap*)malloc(sizeof*(Heap));
      |                                         ^
Compilation failed
91a0c0a
Tue 11 Oct 2022 01:21:07 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
722949c
Tue 11 Oct 2022 01:22:29 AM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|2
total_score: 20/70
75f756d
Thu 13 Oct 2022 01:59:56 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
a2804a9
Sun 16 Oct 2022 10:11:19 PM UTC: 
 heap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c:51:1: error: expected identifier or ‘(’ before ‘}’ token
   51 | }
      | ^
Compilation failed
7ab271f
